[package]
name = "rust-pbft"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/main.rs"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
bincode = "1.3.3"
config = "0.14.0"
either = "1.13.0"
log = "0.4.22"
log4rs = "1.3.0"
reqwest = "0.12.7"
ring = "0.17.8"
rocksdb = "0.22.0"
serde = {version= "1.0.207", features = ["derive"]}
serde_json = "1.0.124"
tokio = {version= "1.4", features = ["full"]}
toml = "0.8.19"
