[package]
name = "rust-pbft"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/main.rs"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
bincode = "1.3.3"
config = "0.14.0"
either = "1.13.0"
log = "0.4.22"
log4rs = "1.3.0"
reqwest = "0.12.7"
serde = {version= "1.0.207", features = ["derive"]}
serde_json = "1.0.124"
tokio = {version= "1.4", features = ["full"]}
toml = "0.8.19"
revm = "14.0.2"
ecdsa = {version="0.16.9", features = ["serde"]}
rand_core = "0.6.4"
k256 = {version="0.13.3", features = ["serde", "ecdsa"]}
digest = "0.10.7"
sha2 = "0.10.8"
rand = "0.8.5"
ring = "0.17.8"
